# trass-cli

./: .gitignore  Cargo.toml  README.md
config/: database.toml  logging.toml
src/: cli.rs  main.rs
