[package]
name = "trass-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trass_core = { git = "https://github.com/skifzzz/trass-core.git" }
tokio = { version = "1.25", features = ["full"] }

log="0.4.17"
pico-args = "0.5.0"
anyhow = "1.0"
env_logger="0.10.0"
